fix: column gap in both iverview and followers

--- a/src/App.module.css
+++ b/src/App.module.css
@@ -189,6 +189,7 @@ main {
     display: grid;
     grid-template-columns: repeat(4, 1fr);
     grid-template-rows: 1fr 1fr;
-    gap: 1rem;
+    row-gap: 1rem;
+    column-gap: 2rem;
   }
 }
